--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react-dom": "^18.2.0",
         "use-sync-external-store":"^1.2.0",
         "tailwindcss":"^3.4.1",
-        "daisyui": "^4.9.0"
+        "daisyui": "^4.9.0",
+        "react-qr-code":"^2.0.14"
     }
 
 }
