--- a/src/NDCOslo2024.Server/NDCOslo2024.Server.fsproj
+++ b/src/NDCOslo2024.Server/NDCOslo2024.Server.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Compile Include="Builders.fs" />
     <Compile Include="Remoting.fs" />
+    <Compile Include="Definition2.fs" />
     <Compile Include="Definition1.fs" />
     <Compile Include="WebApp.fs" />
     <Compile Include="Program.fs" />
